--- a/DPI_server.vcxproj
+++ b/DPI_server.vcxproj
@@ -129,6 +129,13 @@
   <ItemGroup>
     <ClCompile Include="DPI_server.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="reveive output.txt" />
+    <Text Include="usage_out.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
