--- a/DPI_server.vcxproj.filters
+++ b/DPI_server.vcxproj.filters
@@ -19,4 +19,17 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore">
+      <Filter>资源文件</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="usage_out.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="reveive output.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
