--- a/DPI_server.vcxproj.filters
+++ b/DPI_server.vcxproj.filters
@@ -64,5 +64,8 @@
     <Text Include="reveive output.txt">
       <Filter>资源文件</Filter>
     </Text>
+    <Text Include="ptrace result.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
